Refactor ExamController to use constructor injection